# UCP-Commerce

./: .gitignore
CustomUI/: app.js  index.html
python-sdk/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_models.sh  preprocess_schemas.py  pyproject.toml
python-sdk/.github/: CODEOWNERS
python-sdk/.github/workflows/: linter.yml  release.yml
python-sdk/src/ucp_sdk/models/schemas/: capability.py  payment_handler.py  service.py  ucp.py
python-sdk/src/ucp_sdk/models/schemas/shopping/: ap2_mandate.py  buyer_consent.py  checkout.py  checkout_complete_request.py  checkout_create_request.py  checkout_update_request.py  discount.py  order.py  payment.py  payment_complete_request.py  payment_create_request.py  payment_update_request.py
python-sdk/src/ucp_sdk/models/schemas/shopping/fulfillment/: __init__.py
python-sdk/src/ucp_sdk/models/schemas/shopping/fulfillment/dev/ucp/: __init__.py  shopping.py
python-sdk/src/ucp_sdk/models/schemas/shopping/types/: account_info.py  adjustment.py  binding.py  business_fulfillment_config.py  buyer.py  buyer_create_request.py  buyer_update_request.py  card_credential.py  card_payment_instrument.py  context.py  context_create_request.py  context_update_request.py  expectation.py  fulfillment.py  fulfillment_available_method.py  fulfillment_available_method_create_request.py  fulfillment_available_method_update_request.py  fulfillment_create_request.py  fulfillment_destination.py  fulfillment_destination_create_request.py  fulfillment_destination_update_request.py  fulfillment_event.py  fulfillment_group.py  fulfillment_group_create_request.py  fulfillment_group_update_request.py  fulfillment_method.py  fulfillment_method_create_request.py  fulfillment_method_update_request.py  fulfillment_option.py  fulfillment_option_create_request.py  fulfillment_option_update_request.py  fulfillment_update_request.py  item.py  item_create_request.py  item_update_request.py  line_item.py  line_item_create_request.py  line_item_update_request.py  link.py  merchant_fulfillment_config.py  (+23 more)
python-sdk/src/ucp_sdk/models/schemas/transports/: embedded_config.py
python-sdk/templates/pydantic_v2/: RootModel.jinja2
samples/: .pre-commit-config.yaml
samples-copy/: .codespellignore  .gitignore  .prettierrc  README.md
(+89 files in other folders)
